k8s/crypto-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crypto-api-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: crypto-api
  template:
    metadata:
      labels:
        app: crypto-api
    spec:
      containers:
        - name: crypto-api
          image: gcr.io/canvas-genius-470406-s7/crypto-api:latest
          ports:
            - containerPort: 8080
