k8s/crypto-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crypto-api-service
spec:
  type: ClusterIP
  selector:
    app: crypto-api
  ports:
    - port: 80
      targetPort: 8080
